--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TFT Helper</string>
+    <string name="summoner_name">Summoner Name: </string>
+    <string name="summoner_level">Summoner Level: </string>
+    <string name="champion_name">Champion Name: </string>
+    <string name="champion_used">Champion Used: </string>
+    <string name="item_used">Item Used: </string>
 </resources>
